Release VosMac 0.1.1